# rust-chess

./: .gitignore  Cargo.toml  README.md  justfile  todo.txt
.cargo/: config.toml
attack_masks/: compute_masks.py  masks.rs
src/: bot_arena.rs  bot_handler.rs  constants.rs  engine.rs  engine_handler.rs  engines.rs  evaluators.rs  game.rs  game_mode.rs  game_state.rs  lib.rs  main.rs  mechanics.rs  movegen.rs  search_engines.rs  tests.rs  update_state.rs
src/attack_masks/: compute_masks.py  masks.rs
src/constants/: compute_masks.py  magic.rs  masks.rs  misc.rs  mod.rs  start_fens.rs
src/engine/: bot_handler.rs  evaluators.rs  mod.rs  search_engines.rs
src/modes/: bot_arena.rs  gui.rs  mod.rs  mode_selection.rs  perft.rs
