[package]
name = "bradybot"
version = "0.1.0"
edition = "2024"

[dependencies]
macroquad = { version = "0.4.14", optional = true }
arrayvec = "0.7"
rand = "0.9.2"
libm = "0.2"

[profile.release]
#opt-level = 3    
#lto = "fat"       
#codegen-units = 1  
#strip = true
debug = true        
panic = "abort"         

[features]
default = ["gui"]
gui = ["macroquad"]

[[bin]]
name = "gui"
path = "src/bin/gui.rs"
required-features = ["gui"]

[[bin]]
name = "cli"
path = "src/bin/cli.rs"

[[bin]]
name = "magic"
path = "src/bin/magic.rs"